--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 [![Codecov test coverage](https://codecov.io/gh/chriszheng2016/zstexplorer/branch/master/graph/badge.svg)](https://codecov.io/gh/chriszheng2016/zstexplorer?branch=master)
+[![R-CMD-check](https://github.com/chriszheng2016/zstexplorer/workflows/R-CMD-check/badge.svg)](https://github.com/chriszheng2016/zstexplorer/actions)
 <!-- badges: end -->
 
 The goal of zstexplorer is to ...
